--- a/QuanLyPhongMachTu/QuanLyPhongMachTu/MenuQuanLyKhamBenh.vi.resx
+++ b/QuanLyPhongMachTu/QuanLyPhongMachTu/MenuQuanLyKhamBenh.vi.resx
@@ -117,4 +117,64 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>229, 83</value>
+  </data>
+  <data name="button1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>147, 75</value>
+  </data>
+  <data name="button1.Text" xml:space="preserve">
+    <value>Thêm thông tin bệnh nhân</value>
+  </data>
+  <data name="button2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>44, 350</value>
+  </data>
+  <data name="button2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>142, 75</value>
+  </data>
+  <data name="button2.Text" xml:space="preserve">
+    <value>Lập phiếu khám</value>
+  </data>
+  <data name="button3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>147, 73</value>
+  </data>
+  <data name="button3.Text" xml:space="preserve">
+    <value>Kê thuốc</value>
+  </data>
+  <data name="button4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>142, 73</value>
+  </data>
+  <data name="button4.Text" xml:space="preserve">
+    <value>Lập Hóa đơn</value>
+  </data>
+  <data name="button6.Location" type="System.Drawing.Point, System.Drawing">
+    <value>39, 83</value>
+  </data>
+  <data name="button6.Size" type="System.Drawing.Size, System.Drawing">
+    <value>147, 71</value>
+  </data>
+  <data name="button6.Text" xml:space="preserve">
+    <value>Kiểm tra hồ sơ bệnh án</value>
+  </data>
+  <data name="button7.Size" type="System.Drawing.Size, System.Drawing">
+    <value>142, 71</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="lbQLKhamBenh.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="lbQLKhamBenh.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Verdana, 15.75pt, style=Bold</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="lbQLKhamBenh.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="lbQLKhamBenh.Size" type="System.Drawing.Size, System.Drawing">
+    <value>266, 25</value>
+  </data>
+  <data name="lbQLKhamBenh.Text" xml:space="preserve">
+    <value>QUẢN LÝ KHÁM BỆNH</value>
+  </data>
 </root>
