--- a/QuanLyPhongMachTu/QuanLyPhongMachTu/MenuQuanLyKhamBenh.resx
+++ b/QuanLyPhongMachTu/QuanLyPhongMachTu/MenuQuanLyKhamBenh.resx
@@ -142,6 +142,10 @@
   <data name="&gt;&gt;button7.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>420, 473</value>
+  </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="button4.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -155,11 +159,17 @@
   <data name="&gt;&gt;label1.Name" xml:space="preserve">
     <value>label1</value>
   </data>
+  <data name="&gt;&gt;lbQLKhamBenh.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
   <data name="button6.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
   </data>
   <data name="button2.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
+  </data>
+  <data name="&gt;&gt;lbQLKhamBenh.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;button6.Name" xml:space="preserve">
     <value>button6</value>
@@ -170,7 +180,6 @@
   <data name="&gt;&gt;button2.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="label1.Font" type="System.Drawing.Font, System.Drawing">
     <value>Verdana, 15.75pt, style=Bold</value>
   </data>
@@ -192,11 +201,11 @@
   <data name="button1.Location" type="System.Drawing.Point, System.Drawing">
     <value>39, 69</value>
   </data>
-  <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;lbQLKhamBenh.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
-  <data name="&gt;&gt;button3.ZOrder" xml:space="preserve">
-    <value>4</value>
+  <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
+    <value>2</value>
   </data>
   <data name="button1.Size" type="System.Drawing.Size, System.Drawing">
     <value>147, 95</value>
@@ -219,9 +228,6 @@
   <data name="button2.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
   </data>
-  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>97, 19</value>
-  </data>
   <data name="&gt;&gt;button3.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
@@ -231,13 +237,16 @@
   <data name="button3.Text" xml:space="preserve">
     <value>Kê Toa Thuốc</value>
   </data>
-  <data name="&gt;&gt;button6.ZOrder" xml:space="preserve">
-    <value>1</value>
+  <data name="&gt;&gt;button3.ZOrder" xml:space="preserve">
+    <value>4</value>
   </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 13</value>
   </data>
   <data name="&gt;&gt;button1.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;button3.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="button1.TabIndex" type="System.Int32, mscorlib">
@@ -252,17 +261,14 @@
   <data name="button3.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
     <value>GrowAndShrink</value>
   </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="$this.AutoSizeMode" type="System.Windows.Forms.AutoSizeMode, System.Windows.Forms">
     <value>GrowAndShrink</value>
   </data>
   <data name="&gt;&gt;button6.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="button7.Location" type="System.Drawing.Point, System.Drawing">
-    <value>234, 350</value>
+  <data name="&gt;&gt;button6.ZOrder" xml:space="preserve">
+    <value>1</value>
   </data>
   <data name="button6.Location" type="System.Drawing.Point, System.Drawing">
     <value>39, 350</value>
@@ -279,6 +285,9 @@
   <data name="&gt;&gt;button2.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;button7.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
   <data name="&gt;&gt;button4.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -294,14 +303,20 @@
   <data name="button2.Location" type="System.Drawing.Point, System.Drawing">
     <value>234, 69</value>
   </data>
+  <data name="button7.Location" type="System.Drawing.Point, System.Drawing">
+    <value>234, 350</value>
+  </data>
   <data name="label1.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
+  </data>
+  <data name="lbQLKhamBenh.Location" type="System.Drawing.Point, System.Drawing">
+    <value>97, 19</value>
   </data>
   <data name="&gt;&gt;button7.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;button7.ZOrder" xml:space="preserve">
-    <value>0</value>
+  <data name="&gt;&gt;$this.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="button7.Size" type="System.Drawing.Size, System.Drawing">
     <value>142, 91</value>
@@ -309,8 +324,8 @@
   <data name="button3.Location" type="System.Drawing.Point, System.Drawing">
     <value>39, 218</value>
   </data>
-  <data name="&gt;&gt;button3.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>97, 19</value>
   </data>
   <data name="button4.Size" type="System.Drawing.Size, System.Drawing">
     <value>142, 93</value>
@@ -336,11 +351,14 @@
   <data name="$this.Text" xml:space="preserve">
     <value>Menu Quản Lý Khám Bệnh</value>
   </data>
+  <data name="lbQLKhamBenh.TabIndex" type="System.Int32, mscorlib">
+    <value>1</value>
+  </data>
   <data name="button3.Size" type="System.Drawing.Size, System.Drawing">
     <value>147, 93</value>
   </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>420, 473</value>
+  <data name="&gt;&gt;lbQLKhamBenh.Name" xml:space="preserve">
+    <value>lbQLKhamBenh</value>
   </data>
   <data name="button2.Size" type="System.Drawing.Size, System.Drawing">
     <value>142, 95</value>
